--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,14 @@
+upstream front {
+	server front:80   }
+upstream back {
+	serber back:8008  }
+
 server {
 	listen 80;
 	server_name 123.com;
 	
 	location / {
-		proxy_pass http://123.com:3000/;
+		proxy_pass http://123.com:80/;
 		proxy_set_header Host $Host
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,8 +20,8 @@ server {
 	server_name 1234.com;
 	
 	location / {
-		proxy_pass http://1234:8080
-		proxy_set_header Host $Host
+		proxy_pass http://1234.com:8080
+		proxy_set_header Host $host
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Real-IP $remote_addr;
 	}
