--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,10 +5,10 @@ upstream back {
 
 server {
 	listen 80;
-	server_name 123.com;
+	server_name front;
 	
 	location / {
-		proxy_pass http://123.com:80/;
+		proxy_pass http://front:80;
 		proxy_set_header Host $Host
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,10 +17,10 @@ server {
 
 server {
 	listen 8080;
-	server_name 1234.com;
+	server_name back;
 	
 	location / {
-		proxy_pass http://1234.com:8080
+		proxy_pass http://back:8080;
 		proxy_set_header Host $host
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Real-IP $remote_addr;
