--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,14 @@
 upstream front {
-	server front:80   }
+	server node:80   }
 upstream back {
-	serber back:8008  }
+	serber jvm:8008  }
 
 server {
 	listen 80;
 	server_name front;
 	
 	location / {
-		proxy_pass http://front:80;
+		proxy_pass http://node;
 		proxy_set_header Host $Host
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,7 +20,7 @@ server {
 	server_name back;
 	
 	location / {
-		proxy_pass http://back:8080;
+		proxy_pass http://jvm;
 		proxy_set_header Host $host
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Real-IP $remote_addr;
